k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-celfahr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-celfahr
  template:
    metadata:
      labels:
        app: app-celfahr
    spec:
      containers:
        - name: celfahr-container
          image: valentingarciairiart/celfahr:v2
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
