k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: celfahr-service
spec:
  type: ClusterIP  # Cambiando de LoadBalancer a ClusterIP
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: app-celfahr
